paas/dayzero/automation/Terraform/02.OCP/my_resources/various-yaml-scripts/dso-sample/Manifests/ocp3/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: dso-juice-shop
  namespace: dso-juice-shop
spec:
  host: dso-juice-shop.apps.ocp1.azure.dso.digital.mod.uk
  to:
    kind: Service
    name: juice-shop-service
    weight: 100
  port:
    targetPort: 3000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
